--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
       <div class="card-detail-close" onclick="document.getElementById('detail-seeds-modal').style.display='none'">×</div>
     </div>
     <div class="modal-body">
-      <img src="https://images.pexels.com/photos/248534/pexels-photo-248534.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Hybrid Seeds" style="width:100%; max-width:220px; float:right; margin:0 0 16px 16px; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.1);">
+      <img src="https://images.pexels.com/photos/158827/field-cereal-farm-garden-158827.jpeg?auto=compress&w=600" alt="Hybrid Seeds" style="width:100%; max-width:220px; float:right; margin:0 0 16px 16px; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.1);">
       <h4 id="Major_Seed_Categories_Head">Major Seed Categories</h4>
       <ul>
         <li id="Seeds_Availability_Guide_Info1"><b>Cereal & Grain Seeds:</b> Corn, rice, wheat, barley, and oats.</li>
@@ -357,24 +357,34 @@
       <div class="card-detail-close" onclick="document.getElementById('detail-schemes-modal').style.display='none'">×</div>
     </div>
     <div class="modal-body">
-      <img src="https://images.pexels.com/photos/6857178/pexels-photo-6857178.jpeg?auto=compress&cs=tinysrgb&w=400" alt="PM Kisan Scheme" style="width:100%; max-width:240px; float:left; margin:0 16px 16px 0; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.1);">
+      <img src="https://images.pexels.com/photos/248534/pexels-photo-248534.jpeg?auto=compress&w=600" alt="PM Kisan Scheme" style="width:100%; max-width:240px; float:left; margin:0 16px 16px 0; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.1);">
       <h4 id="Major_Govt_Schemes_for_Farmers_Head">Major Govt Schemes for Farmers (2025)</h4>
       <ul>
-        <li id="Government_Schemes_Policies_Info1"><b>PM-KISAN Samman Nidhi:</b> ₹6000/yr in 3 installments to small & marginal farmers, direct to bank account.</li>
-        <li id="Government_Schemes_Policies_Info2"><b>Pradhan Mantri Fasal Bima Yojana (PMFBY):</b> Crop insurance for 50+ crops; premium 1.5–2% for food crops, 5% for horticulture.</li>
-        <li id="Government_Schemes_Policies_Info3"><b>Kisan Credit Card (KCC):</b> Flexible, low-interest crop loans up to ₹3 lakh.</li>
-        <li id="Government_Schemes_Policies_Info4"><b>PM Krishi Sinchai Yojana (PMKSY):</b> Subsidizes micro/drip irrigation systems & expands irrigation area.</li>
-        <li id="Government_Schemes_Policies_Info5"><b>Soil Health Card:</b> Custom nutrient recommendations for higher yield.</li>
-        <li id="Government_Schemes_Policies_Info6"><b>RKVY-RAFTAAR:</b> Grants for infra, input subsidies, agri innovation.</li>
-        <li id="Government_Schemes_Policies_Info7"><b>e-NAM:</b> National Agri-Market for transparent crop selling, pan-India.</li>
-        <li id="Government_Schemes_Policies_Info8"><b>Paramparagat Krishi Vikas Yojana (PKVY):</b> Supports organic farming clusters, input subsidies.</li>
-        <li id="Government_Schemes_Policies_Info9"><b>Agriculture Infrastructure Fund (AIF):</b> Grants for storage, cold chain, processing/post-harvest units.</li>
-        <li id="Government_Schemes_Policies_Info10"><b>PM Matsya Sampada Yojana:</b> Infrastructure for fisheries & aquaculture.</li>
-        <li id="Government_Schemes_Policies_Info11"><b>SMAM Mechanization:</b> Farm machinery/tractor subsidy focused on marginal farmers.</li>
+        <li id="Government_Schemes_Policies_Info1"><b>PM-KISAN Samman Nidhi:</b> ₹6000/yr in 3 installments to small & marginal farmers, direct to bank account.<br>
+          <a href="https://pmkisan.gov.in/" target="_blank" style="color:#1e7b3f; font-size:14px; text-decoration:underline;">👉 Apply Online Now</a></li>
+        <li id="Government_Schemes_Policies_Info2"><b>Pradhan Mantri Fasal Bima Yojana (PMFBY):</b> Crop insurance for 50+ crops; premium 1.5–2% for food crops, 5% for horticulture.<br>
+          <a href="https://ccs.dacnet.nic.in/" target="_blank" style="color:#1e7b3f; font-size:14px; text-decoration:underline;">👉 Apply Online Now</a></li>
+        <li id="Government_Schemes_Policies_Info3"><b>Kisan Credit Card (KCC):</b> Flexible, low-interest crop loans up to ₹3 lakh.<br>
+          <a href="https://ccs.dacnet.nic.in/" target="_blank" style="color:#1e7b3f; font-size:14px; text-decoration:underline;">👉 Apply Online Now</a></li>
+        <li id="Government_Schemes_Policies_Info4"><b>PM Krishi Sinchai Yojana (PMKSY):</b> Subsidizes micro/drip irrigation systems & expands irrigation area.<br>
+          <a href="https://pmksy.gov.in/" target="_blank" style="color:#1e7b3f; font-size:14px; text-decoration:underline;">👉 Apply Online Now</a></li>
+        <li id="Government_Schemes_Policies_Info5"><b>Soil Health Card:</b> Custom nutrient recommendations for higher yield.<br>
+          <a href="https://soilhealth.dac.gov.in/" target="_blank" style="color:#1e7b3f; font-size:14px; text-decoration:underline;">👉 Get Your Card</a></li>
+        <li id="Government_Schemes_Policies_Info6"><b>RKVY-RAFTAAR:</B> Grants for infra, input subsidies, agri innovation.<br>
+          <a href="https://rkvy.gov.in/" target="_blank" style="color:#1e7b3f; font-size:14px; text-decoration:underline;">👉 Apply Online Now</a></li>
+        <li id="Government_Schemes_Policies_Info7"><b>e-NAM:</b> National Agri-Market for transparent crop selling, pan-India.<br>
+          <a href="https://enam.gov.in/" target="_blank" style="color:#1e7b3f; font-size:14px; text-decoration:underline;">👉 Visit e-NAM Portal</a></li>
+        <li id="Government_Schemes_Policies_Info8"><b>Paramparagat Krishi Vikas Yojana (PKVY):</b> Supports organic farming clusters, input subsidies.<br>
+          <a href="https://pkvy.gov.in/" target="_blank" style="color:#1e7b3f; font-size:14px; text-decoration:underline;">👉 Apply Online Now</a></li>
+        <li id="Government_Schemes_Policies_Info9"><b>Agriculture Infrastructure Fund (AIF):</B> Grants for storage, cold chain, processing/post-harvest units.<br>
+          <a href="https://aif.gov.in/" target="_blank" style="color:#1e7b3f; font-size:14px; text-decoration:underline;">👉 Apply Online Now</a></li>
+        <li id="Government_Schemes_Policies_Info10"><b>PM Matsya Sampada Yojana:</b> Infrastructure for fisheries & aquaculture.<br>
+          <a href="https://pmmsy.gov.in/" target="_blank" style="color:#1e7b3f; font-size:14px; text-decoration:underline;">👉 Apply Online Now</a></li>
+        <li id="Government_Schemes_Policies_Info11"><b>SMAM Mechanization:</b> Farm machinery/tractor subsidy focused on marginal farmers.<br>
+          <a href="https://dbt.gov.in/schemes/subsidy-on-farm-machinery" target="_blank" style="color:#1e7b3f; font-size:14px; text-decoration:underline;">👉 Apply Online Now</a></li>
       </ul>
       <div style="clear:both; margin-top:20px; padding-top:15px; border-top:1px dashed #ccc;">
-        <a href="https://pmkisan.gov.in/" target="_blank" style="display:inline-block; margin-right:12px; background:#1e7b3f; color:white; padding:8px 16px; border-radius:8px; text-decoration:none; font-weight:600;">✅ Apply Online Now</a>
-        <a href="tel:18001801551" style="display:inline-block; background:#ff9800; color:white; padding:8px 16px; border-radius:8px; text-decoration:none; font-weight:600;">📞 Call Helpline</a>
+        <a href="tel:18001801551" style="display:inline-block; background:#ff9800; color:white; padding:8px 16px; border-radius:8px; text-decoration:none; font-weight:600;">📞 Call Helpline: 1800-180-1551</a>
       </div>
     </div>
   </div>
@@ -387,7 +397,7 @@
       <div class="card-detail-close" onclick="document.getElementById('detail-calendar-modal').style.display='none'">×</div>
     </div>
     <div class="modal-body">
-      <img src="https://images.pexels.com/photos/158827/field-cereal-farm-garden-158827.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Crop Calendar" style="width:100%; max-width:260px; float:right; margin:0 0 16px 16px; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.1);">
+      <img src="https://images.pexels.com/photos/268533/pexels-photo-268533.jpeg?auto=compress&p=600" alt="Crop Calendar" style="width:100%; max-width:260px; float:right; margin:0 0 16px 16px; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.1);">
       <h4 id="Crop_Calendar_Guide">Crop Calendar by Season, Region & Crop</h4>
       <ul>
         <li id="Crop_Calendar_Guide_info1"><b>Kharif (June–Sep):</b> Paddy rice, maize, millets, cotton, soybean, groundnut, pulses, vegetables.</li>
@@ -409,7 +419,7 @@
       <div class="card-detail-close" onclick="document.getElementById('detail-fertilizer-modal').style.display='none'">×</div>
     </div>
     <div class="modal-body">
-      <img src="https://images.pexels.com/photos/461382/pexels-photo-461382.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Pest Control" style="width:100%; max-width:220px; float:left; margin:0 16px 16px 0; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.1);">
+      <img src="https://images.pexels.com/photos/461382/pexels-photo-461382.jpeg?auto=compress&p=600" alt="Pest Control" style="width:100%; max-width:220px; float:left; margin:0 16px 16px 0; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.1);">
       <h4 id="Fertilizer_Pest_Advisory_Head">Pest & Fertilizer Guidance (2025)</h4>
       <ul>
         <li id="Fertilizer_Pest_Advisory_info1"><b>Rice:</b> 90–120N, 40–60P, 40–60K per ha. Split 1/2 basal, 1/4 at tillering, 1/4 panicle stage; monitor leaf folder, blast, sheath blight, stem borer.</li>
@@ -434,7 +444,7 @@
       <div class="card-detail-close" onclick="document.getElementById('detail-msp-modal').style.display='none'">×</div>
     </div>
     <div class="modal-body">
-      <img src="https://images.pexels.com/photos/2402236/pexels-photo-2402236.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Mandi Market" style="width:100%; max-width:280px; float:right; margin:0 0 16px 16px; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.1);">
+      <img src="https://images.pexels.com/photos/2402236/pexels-photo-2402236.jpeg?auto=compress&p=600" alt="Mandi Market" style="width:100%; max-width:280px; float:right; margin:0 0 16px 16px; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.1);">
       <h4 id="MSP_Market_Rates_Guide">MSP & Market Price Trends</h4>
       <ul>
         <li id="MSP_Market_Rates_Guide_info1"><b>Live MSP Rates:</b> See page for government-announced MSPs for all main cereals, pulses, oilseeds for 2025; updated monthly on e-NAM & official portals.</li>
@@ -457,7 +467,7 @@
       <div class="card-detail-close" onclick="document.getElementById('detail-machines-modal').style.display='none'">×</div>
     </div>
     <div class="modal-body">
-      <img src="https://images.pexels.com/photos/718978/pexels-photo-718978.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Electric Tractor" style="width:100%; max-width:240px; float:left; margin:0 16px 16px 0; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.1);">
+      <img src="https://images.pexels.com/photos/718978/pexels-photo-718978.jpeg?auto=compress&p=600" alt="Electric Tractor" style="width:100%; max-width:240px; float:left; margin:0 16px 16px 0; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.1);">
       <h4 id="Latest_Machine_Info1">Autonomous Electric Tractor</h4>
       <p id="Latest_Machine_Info1_Desc">This fully electric, driverless tractor uses advanced GPS and sensor technology to plow, plant, and spray with high precision, operating 24/7. It reduces labor costs and increases fuel efficiency.</p>
       <h5 id="Latest_Machine_Info1_Usage">How to Use</h5>
@@ -468,7 +478,7 @@
         <li id="Latest_Machine_Info1_Usage_Step4">Charge the vehicle at a dedicated high-power station between tasks.</li>
       </ul>
       <div style="clear:both; margin-top:16px;"></div>
-      <img src="https://images.pexels.com/photos/6157025/pexels-photo-6157025.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Agricultural Drone" style="width:100%; max-width:240px; float:right; margin:0 0 16px 16px; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.1);">
+      <img src="https://images.pexels.com/photos/6157025/pexels-photo-6157025.jpeg?auto=compress&p=600" alt="Agricultural Drone" style="width:100%; max-width:240px; float:right; margin:0 0 16px 16px; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.1);">
       <h4 id="Latest_Machine_Info2">Agricultural Drones (Agri-Drones)</h4>
       <p id="Latest_Machine_Info2_Desc">Equipped with multispectral sensors, Agri-Drones provide invaluable data on crop health, soil conditions, and hydration levels. They are also used for precise pesticide and fertilizer spraying.</p>
       <h5 id="Latest_Machine_Info2_Usage">How to Use</h5>
@@ -485,7 +495,6 @@
     </div>
   </div>
 </div>
-
 <main>
  <section class="hero" role="banner" aria-label="Announcements">
   <div class="left">
